--- a/package.json
+++ b/package.json
@@ -1,12 +1,13 @@
 {
-  "name": "baileys-bot",
+  "name": "whatsapp-bot",
   "version": "1.0.0",
-  "description": "Whatsapp bot using Baileys",
   "main": "index.js",
+  "type": "commonjs",
   "scripts": {
     "start": "node index.js"
   },
   "dependencies": {
+    "@hapi/boom": "^10.0.1",
     "@whiskeysockets/baileys": "^6.6.0"
   }
 }
