--- a/package.json
+++ b/package.json
@@ -2,12 +2,11 @@
   "name": "whatsapp-bot",
   "version": "1.0.0",
   "main": "index.js",
-  "type": "commonjs",
   "scripts": {
     "start": "node index.js"
   },
   "dependencies": {
-    "@hapi/boom": "^10.0.1",
-    "@whiskeysockets/baileys": "^6.6.0"
+    "@whiskeysockets/baileys": "^6.7.0",
+    "@hapi/boom": "^10.0.0"
   }
 }
