--- a/package.json
+++ b/package.json
@@ -1,12 +1,13 @@
 {
-  "name": "whatsapp-bot",
+  "name": "baileys-whatsapp-bot",
   "version": "1.0.0",
   "main": "index.js",
+  "type": "commonjs",
   "scripts": {
     "start": "node index.js"
   },
   "dependencies": {
-    "@whiskeysockets/baileys": "^6.7.0",
+    "@whiskeysockets/baileys": "^6.6.0",
     "@hapi/boom": "^10.0.0"
   }
 }
