--- a/package.json
+++ b/package.json
@@ -1,11 +1,13 @@
 {
-  "name": "baileys-whatsapp-bot",
+  "name": "decrypt-media-server",
   "version": "1.0.0",
-  "main": "index.js",
+  "main": "server.js",
+  "type": "module",
   "scripts": {
-    "start": "node index.js"
+    "start": "node server.js"
   },
   "dependencies": {
-    "@whiskeysockets/baileys": "^6.5.0"
+    "axios": "^1.6.0",
+    "express": "^4.18.2"
   }
 }
